[package]
name = "updateTodo"
version = "0.1.0"
authors = ["Thang Chung <thangchung.onthenet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
suborbital = '0.13.1'
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"